src/test/ui/parser/column-offset-1-based.rs
// compile-flags: -Z parse-only

# //~ ERROR expected `[`, found `<eof>`
